--- a/Rust/Cargo.toml
+++ b/Rust/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "XorInRust"
-version = "0.1.0"
+version = "1.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 base64 = "0.13.0"
+clearscreen = "2.0.1"
